// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stylelint > with options > should return a config for { plugins: ['Circuit UI (OSS scope)'] } 1`] = `
{
  "extends": [
    "stylelint-config-standard",
  ],
  "plugins": [
    "stylelint-no-unsupported-browser-features",
    "@sumup-oss/stylelint-plugin-circuit-ui",
  ],
  "reportDescriptionlessDisables": true,
  "reportInvalidScopeDisables": true,
  "reportNeedlessDisables": true,
  "rules": {
    "at-rule-no-unknown": null,
    "block-no-empty": null,
    "circuit-ui/no-deprecated-custom-properties": true,
    "circuit-ui/no-invalid-custom-properties": true,
    "custom-property-no-missing-var-function": null,
    "declaration-block-no-duplicate-custom-properties": null,
    "declaration-block-no-duplicate-properties": null,
    "declaration-block-no-redundant-longhand-properties": null,
    "declaration-block-no-shorthand-property-overrides": null,
    "declaration-no-important": null,
    "font-family-no-duplicate-names": null,
    "font-family-no-missing-generic-family-keyword": null,
    "function-linear-gradient-no-nonstandard-direction": null,
    "function-no-unknown": null,
    "keyframe-block-no-duplicate-selectors": null,
    "keyframe-declaration-no-important": null,
    "media-feature-name-no-unknown": null,
    "media-feature-range-notation": [
      "prefix",
    ],
    "named-grid-areas-no-invalid": null,
    "no-descending-specificity": null,
    "no-duplicate-at-import-rules": null,
    "no-invalid-position-at-import-rule": null,
    "no-irregular-whitespace": null,
    "plugin/no-unsupported-browser-features": [
      true,
      {
        "ignorePartialSupport": true,
        "severity": "warning",
      },
    ],
    "property-no-unknown": null,
    "selector-anb-no-unmatchable": null,
    "selector-class-pattern": null,
    "selector-not-notation": [
      "simple",
    ],
    "selector-pseudo-class-no-unknown": [
      true,
      {
        "ignorePseudoClasses": [
          "global",
        ],
      },
    ],
    "selector-pseudo-element-no-unknown": null,
    "selector-type-no-unknown": null,
    "unit-no-unknown": null,
    "value-keyword-case": [
      "lower",
      {
        "camelCaseSvgKeywords": true,
      },
    ],
  },
}
`;

exports[`stylelint > with options > should return a config for { plugins: ['Circuit UI'] } 1`] = `
{
  "extends": [
    "stylelint-config-standard",
  ],
  "plugins": [
    "stylelint-no-unsupported-browser-features",
    "@sumup/stylelint-plugin-circuit-ui",
  ],
  "reportDescriptionlessDisables": true,
  "reportInvalidScopeDisables": true,
  "reportNeedlessDisables": true,
  "rules": {
    "at-rule-no-unknown": null,
    "block-no-empty": null,
    "circuit-ui/no-invalid-custom-properties": true,
    "custom-property-no-missing-var-function": null,
    "declaration-block-no-duplicate-custom-properties": null,
    "declaration-block-no-duplicate-properties": null,
    "declaration-block-no-redundant-longhand-properties": null,
    "declaration-block-no-shorthand-property-overrides": null,
    "declaration-no-important": null,
    "font-family-no-duplicate-names": null,
    "font-family-no-missing-generic-family-keyword": null,
    "function-linear-gradient-no-nonstandard-direction": null,
    "function-no-unknown": null,
    "keyframe-block-no-duplicate-selectors": null,
    "keyframe-declaration-no-important": null,
    "media-feature-name-no-unknown": null,
    "media-feature-range-notation": [
      "prefix",
    ],
    "named-grid-areas-no-invalid": null,
    "no-descending-specificity": null,
    "no-duplicate-at-import-rules": null,
    "no-invalid-position-at-import-rule": null,
    "no-irregular-whitespace": null,
    "plugin/no-unsupported-browser-features": [
      true,
      {
        "ignorePartialSupport": true,
        "severity": "warning",
      },
    ],
    "property-no-unknown": null,
    "selector-anb-no-unmatchable": null,
    "selector-class-pattern": null,
    "selector-not-notation": [
      "simple",
    ],
    "selector-pseudo-class-no-unknown": [
      true,
      {
        "ignorePseudoClasses": [
          "global",
        ],
      },
    ],
    "selector-pseudo-element-no-unknown": null,
    "selector-type-no-unknown": null,
    "unit-no-unknown": null,
    "value-keyword-case": [
      "lower",
      {
        "camelCaseSvgKeywords": true,
      },
    ],
  },
}
`;
